admin 페이지 chart 그리기, 차트 문제로 adminDAO, homeService 수정, view 경로 문제 수정 admin 페이지 x버튼 추가

--- a/src/main/webapp/resources/CSS/admin/styles.css
+++ b/src/main/webapp/resources/CSS/admin/styles.css
@@ -1058,3 +1058,8 @@ table.tablePlace td {
 .tablePlace img {
 	width: 200px;
 }
+div.row {
+	float: right;
+	width: 82%;
+	padding: 3px 30px 0 0;
+}
