--- a/src/main/webapp/resources/CSS/admin/styles.css
+++ b/src/main/webapp/resources/CSS/admin/styles.css
@@ -719,7 +719,7 @@ a.label:hover, a.label:focus {
   padding: 7px 15px; }
 
 .nav-pills li.active a, .nav-pills li.active a:hover {
-  background: #30a5ff; }
+  background: rgb(255, 255, 255); } 
 
 .tab-content {
   padding: 15px; }
@@ -788,7 +788,7 @@ a.label:hover, a.label:focus {
   background-color: #30a5ff;
   color: #fff; }
 
-.sidebar ul.nav .active a, .sidebar ul.nav li.parent a.active, .sidebar ul.nav .active > a:hover, .sidebar ul.nav li.parent a.active:hover, .sidebar ul.nav .active > a:focus, .sidebar ul.nav li.parent a.active:focus {
+ .sidebar ul.nav li.parent a.active, .sidebar ul.nav .active > a:hover, .sidebar ul.nav li.parent a.active:hover, .sidebar ul.nav .active > a:focus, .sidebar ul.nav li.parent a.active:focus {
   color: #fff;
   background-color: #30a5ff; }
 
@@ -1039,7 +1039,7 @@ table.tablePlace {
   line-height: 1.5;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
-  margin: 20px 10px;
+  margin: 20px 27px;
   width:80%;
   float: right;
 }
@@ -1050,7 +1050,6 @@ table.tablePlace th {
   vertical-align: top;
 }
 table.tablePlace td {
-  width: 200px;
   padding: 10px;
   vertical-align: top;
 }
@@ -1062,4 +1061,17 @@ div.row {
 	float: right;
 	width: 82%;
 	padding: 3px 30px 0 0;
+}
+td.W30 {
+	width: 30px;
+}
+.tablePlace tbody {
+	padding: 10px 0 0 50px;
+}
+.topPlace {
+	float: right;
+	width: 80%;
+}
+.buttonPlace {
+	margin: 20px 0 0 -10px;
 }
