--- a/src/main/webapp/resources/CSS/admin/styles.css
+++ b/src/main/webapp/resources/CSS/admin/styles.css
@@ -1059,7 +1059,6 @@ table.tablePlace td {
 }
 div.row {
 	float: right;
-	width: 82%;
 	padding: 3px 30px 0 0;
 }
 td.W30 {
@@ -1074,4 +1073,37 @@ td.W30 {
 }
 .buttonPlace {
 	margin: 20px 0 0 -10px;
+}
+.mainPlace {
+	width: 80%;
+	float: right;
+	padding: 25px 25px 0 0;
+}
+
+.home_user {
+	width: 50%;
+	height: 500px;
+	float: left;
+}
+.home_board {
+	width: 50%;
+	height: 500px;
+	float: left;
+}
+.home_place {
+	width: 50%;
+	height: 500px;
+	float: left;
+}
+.home_stats {
+
+	width: 50%;
+	height: 500px;
+	float: left;
+}
+.element_title {
+	width: 100%; 
+	float: left;
+	font-size: 1.8em;
+	
 }
