--- a/src/main/webapp/resources/CSS/admin/styles.css
+++ b/src/main/webapp/resources/CSS/admin/styles.css
@@ -1107,3 +1107,30 @@ td.W30 {
 	font-size: 1.8em;
 	
 }
+.center {
+	float: right;
+	margin-right: 100px;
+	margin-bottom: 30px;
+}
+.left{
+	float: right;
+	margin-right: 30px;
+}
+.right{
+	float: right;
+	margin-right: 20px;
+}
+#list{
+	float: right;
+	width: 100%;
+}
+.tooltip-top img{
+	width:16px;
+	height: 18px;
+	position: relative;
+}
+.delPlace{
+  float: right;
+  margin: -10px 50px 0 0;
+  
+}
