--- a/src/main/webapp/resources/CSS/common.css
+++ b/src/main/webapp/resources/CSS/common.css
@@ -1524,7 +1524,104 @@ ul.pagination a:hover:not(.active) {background-color: #ddd;}
 	width: 100%;
 	cursor: pointer;
 }
+.goToImg {
+    font-size: 16px;
+    line-height: 22px;
+    display: block;
+    border: none;
+    background: none;
+    font: inherit;
+    box-sizing: border-box;
+    font-weight: 700;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(53, 197, 240, 0.8);
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 440px 0 0 960px;
+    width: 120px;
+    height: 44px
+}
+.goToImg:hover {
+	background-color: rgb(53, 197, 240);
+}
+.goToImgDiv {
+	position: absolute;
+}
+.imgcon ul {
+    display: block;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+.imgcon ul,ol {list-style:none;}
+.imgcon li{
+	float: left;
+	width: 330px;
+	height: 255px;
+	margin: 0 0 30px 30px;
+	
+}
+.imgcon img{
+	width: 0 auto;
+	box-shadow: 2px 2px 4px 1px rgb(137, 137, 137, 0.8);
+}
+.HomePopImgSpace  img{
+	object-fit: cover;
+	width: 1100px;
+	height: 500px;
+	border-radius: 4px;
+	position: absolute;
+}
+.imgcon img {
+	object-fit: cover;
+	width: 330px;
+	height: 250px;
+	position: absolute;
+	border-radius: 4px;
+}
+article{
+margin: 0 auto;
+width: 1200px;
+}
+.HomeDiv2 {
+height: 350px;
+width: 0 auto;
+}
+.HomePopHSpace{
+	width: 1100px;
+	height: auto;
+	padding: 10px 0;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	position: absolute;
+	background-color: rgb(140, 140, 140, 0.6);
+	z-index: 12;
+}
+.HomePopHSpace span {
+	font-size: 22px;
+	color: white;
+	margin-left: 474px;
+}
 
-
-
-
+.HomeConSpace span {
+	font-size: 18px;
+	color: white;
+}
+.HomeConSpace{
+	width: 320px;
+	height: 60px;
+	background-color: rgb(140, 140, 140, 0.6);
+	position: absolute;
+	margin-top: 180px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	padding: 5px;
+}
+.HomePopImgSpace {
+	width: 1100px;
+	height: 500px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
