--- a/src/main/webapp/resources/CSS/cards/cards.css
+++ b/src/main/webapp/resources/CSS/cards/cards.css
@@ -11,14 +11,14 @@
 .success {background-color: #4CAF50;} /* Green */
 .success:hover {background-color: #46a049;}
 
-.info {background-color: #2196F3;} /* Blue */
-.info:hover {background: #0b7dda;}
+#viewUpdate {background-color: #2196F3;} /* Blue */
+#viewUpdate:hover {background: #0b7dda;}
 
 .warning {background-color: #ff9800;} /* Orange */
 .warning:hover {background: #e68a00;}
-
-.danger {background-color: #f44336;} /* Red */ 
-.danger:hover {background: #da190b;}
+#viewDelete{background-color: #f44336;}
+ /* Red */ 
+#viewDelete:hover {background: #da190b;}
 
 .default {background-color: #e7e7e7; color: black;} /* Gray */ 
 .default:hover {background: #ddd;}
@@ -52,12 +52,47 @@
 	float:right;
 }
 
-.d01{
-	margin :5px 0px;
+.h01{
+ 	display: flex;
+    margin: 5px 0px;
+    text-align: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+#main{
+  padding: 10px 60px;
+}
+@media (min-width: 1024px){
+  #main {
+    padding: 0 0 0 60px;
+}
 }
 
+@media (min-width: 768px){
+  #main {
+    padding: 0 0 0 40px;
+    margin: 0 8px 0 -12px;
+    text-align: left;
+}
+}
+
+
+#main {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 auto;
+    -moz-box-flex: 1;
+    -moz-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    margin: 0;
+    padding: 0 4px;
+    min-width: 0;
+    white-space: nowrap;
+    text-align: center;
+}
 /* 페이징 */
-.center {
+#main .center {
     text-align: center;
 }
 
@@ -117,7 +152,6 @@ ul.pagination a:hover:not(.active) {
 .modal .container {
 	padding: 16px;
 	position: relative;  /* 이래야 안에 있는 absolute 들이 동작 */
-    height: 800px;
     
 } 
 
@@ -211,8 +245,6 @@ ul {
 }
 .center {
     position: relative;
-    text-align: center;
-    padding-top: 70px;
 }
 .recommend_area .item_list.type_thumb.type_1 li .item_section .item_count_area {
     margin-top: 20px;
@@ -333,12 +365,10 @@ ul {
 }
 
 /* 페이징 */
-.center {
-    text-align: center;
-}
 
 ul.pagination{
-	list-style-type:none
+	list-style-type:none;
+  display: block;
 }
 
 ul.pagination li{
@@ -370,13 +400,203 @@ ul.pagination a:hover:not(.active) {
 .pic{
     padding: 5px 0px 5px 0px;
     display: block;
-    width: 100%;
+    max-width: 800px;
     height: auto;
-}
-.select-box{
     text-align: center;
 }
+.select-box{
+  text-align: center;
+}
 #image_container img{
-    height: 20px;
+    height: 200px;
     object-fit: contain;
+}
+
+/* 슬라이드 */
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+/* .mySlides {display: none} */
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-height: 500px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides{
+  text-align: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+#dlg_write .slideshow-container{
+  cursor: pointer;
+}
+.txtArea{
+  float: right;
+}
+
+#sel1{
+  display: inline-block;
+  width: 100px;
+}
+#sel2{
+  display: inline-block;
+  width: 100px;
+}
+#sel3{
+  display: inline-block;
+  width: 100px;
+}
+
+.btn-secondary{
+  float: right;
+}
+
+#main .select{
+  text-align: center;
+}
+
+/* list select box */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+  user-select: none;
+}
+
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/*hide the items when the select box is closed:*/
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #f3969a;
+}
+
+.selected{
+  display: flex;
 }
