--- a/src/main/webapp/resources/CSS/common.css
+++ b/src/main/webapp/resources/CSS/common.css
@@ -1565,7 +1565,6 @@ ul.pagination a:hover:not(.active) {background-color: #ddd;}
 }
 .imgcon img{
 	width: 0 auto;
-	box-shadow: 2px 2px 4px 1px rgb(137, 137, 137, 0.8);
 }
 .HomePopImgSpace  img{
 	object-fit: cover;
@@ -1582,6 +1581,7 @@ ul.pagination a:hover:not(.active) {background-color: #ddd;}
 	border-radius: 4px;
 	transform:scale(1.0);        
     transition: transform .5s; 
+
 
 }
 article{
@@ -1629,8 +1629,8 @@ width: 0 auto;
     padding: 20px 0;
 }
 .imgcon img:hover{            /* 마우스 호버시 */
-   transform:scale(1.5);            /* 이미지 확대 */
-   transition: transform .5s; 	/*  시간 설정  */
+   transform:scale(1.3);            /* 이미지 확대 */
+   transition: transform 1s; 	/*  시간 설정  */
 
 }
 .imgDivOverflow {
@@ -1638,6 +1638,7 @@ width: 0 auto;
 	height: 250px;
 	border-radius: 4px;
 	overflow: hidden;
+	box-shadow: 2px 2px 4px 1px rgb(137, 137, 137, 0.8);
 	position: absolute;
 }
 
