--- a/src/main/webapp/resources/CSS/admin/styles.css
+++ b/src/main/webapp/resources/CSS/admin/styles.css
@@ -1075,7 +1075,9 @@ td.W30 {
 	width: 80%;
 }
 .buttonPlace {
-	margin: 20px 0 0 -10px;
+	width : 300px;
+	margin: 35px 35px 35px 350px;
+	float: left;
 }
 .mainPlace {
 	width: 80%;
@@ -1145,3 +1147,27 @@ td.W30 {
 .pagination a:hover{
 	cursor:pointer;
 }
+.adminSearchPlace1{
+	width: 100%
+}
+.adminSearchPlace2{
+	width: 400px;
+	float: right;
+	margin-right: 100px;
+	margin: 30px;
+}
+#adminPlaceKeyword{
+	width: 400px;
+	height: 50px;
+}
+.adminWMI1{
+	width: 700px;
+	margin: 0 auto;
+}
+.adminWMI2{
+	width: 200px;
+	margin: 20px 0 0 300px;
+	font-size: 35px;
+	text-align: center;
+}
+
