--- a/src/main/webapp/resources/CSS/place/view.css
+++ b/src/main/webapp/resources/CSS/place/view.css
@@ -8,6 +8,37 @@
     background: rgba(0, 0, 0, 0.5);
     width: 800px;
     color: #f1f1f1;
+    
+    box-shadow: 3px 4px 5px 0 rgb(2 2 2 / 20%);
+}
+
+.view_ico {
+	background-image: url(../../../resources/IMG/click.png);
+	background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+	display: inline-block;
+    float: none;
+}
+
+.like_ico1 {
+	background-image: url(../../../resources/IMG/heart1.png);
+	background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+	display: inline-block;
+    float: none;
+	
+}
+
+.like_ico2 {
+	background-image: url(../../../resources/IMG/heart2.png);
+	background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+	display: inline-block;
+    float: none;
+	
 }
 
 .tourView .mainImg {
@@ -19,6 +50,8 @@
     width: 800px;
     height: 400px;
     object-fit: cover;
+    
+    box-shadow: 3px 4px 5px 0 rgb(2 2 2 / 20%);
 }
 
 .tourView .summary {
@@ -54,8 +87,8 @@
 .containerA {
   position: relative;
   border: 1px solid #ccc;
-  width: 796px;
-  height: 496px;
+  width: 798px;
+  height: 498px;
   margin: 0 auto;
   
 }
@@ -161,7 +194,7 @@
 
 ::-webkit-scrollbar {
 /* 스크롤바 전체 영역 */
-  width: 10px;
+  background: #c3c3c3;
 } 
 ::-webkit-scrollbar-track {
       background-color: #f9f9f9;
@@ -170,6 +203,7 @@
 ::-webkit-scrollbar-thumb {
 /*  스크롤  */
   border-radius:30px;
+  background: #35c5f0;
 } 
 ::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
 /*  스크롤의 화살표가 포함된 영역   */
@@ -200,13 +234,15 @@
 #tit1, #tit3, #tit5{
   text-align: center;
   background-color: #c3c3c3;
-  border: solid 1px #c3c3c3;
-  margin: 10px auto 0 auto;
+  border: none;
+  margin: 15px auto 0 auto;
   color: black;
   
   width: 100%;
   padding: 8px 0;
   font-size: 16px;
+  
+  box-shadow: 3px 4px 5px 0 rgb(2 2 2 / 20%);
 }
 
 #tit2, #tit4{
@@ -214,23 +250,32 @@
   display: none;
   border: solid 1px #c3c3c3;
   margin: 0px auto 20px auto;
+  
+  box-shadow: 3px 4px 5px 0 rgb(2 2 2 / 20%);
 }
 
 #imgGallery{
 	display: none;
 }
 
-#tit1::hover , #tit3::hover, #tit5::hover{
-	background-color: blue;
+#tit1:hover , #tit3:hover, #tit5:hover{
+	background-color: #35c5f0;
 	color: white;	
 }	
 
 
 
-.button:hover {background-color: #3e8e41}
+.btn-default{
+	background: #4AB34A;
+	margin: 0 10px;	
+}
+.btn-default:hover {background-color: #3e8e41}
 
-.button:active {
+.btn-default:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+.insert {background-color: #35c5f0;} /* Blue */
+.insert:hover {background: #0b7dda;}
