--- a/src/main/webapp/resources/CSS/calender/common.css
+++ b/src/main/webapp/resources/CSS/calender/common.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: 'Jal_Onuel';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/Jal_Onuel.woff') format('woff');
@@ -1358,5 +1359,286 @@ a{text-decoration: none;}
 .story-entry__image-wrap {
     padding: 0 0 0 60px;
 }
+}
+
+
+
+/* 기본 버튼 */
+.btn {
+  border: none;
+  color: white;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.success {background-color: #4CAF50;} /* Green */
+.success:hover {background-color: #46a049;}
+
+.info {background-color: #2196F3;} /* Blue */
+.info:hover {background: #0b7dda;}
+
+.warning {background-color: #ff9800;} /* Orange */
+.warning:hover {background: #e68a00;}
+
+.danger {background-color: #f44336;} /* Red */ 
+.danger:hover {background: #da190b;}
+
+.default {background-color: #e7e7e7; color: black;} /* Gray */ 
+.default:hover {background: #ddd;}
+
+/* 글 목록 */
+#list table { width: 100%;}
+#list table, #list th, #list td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+#list td, #list th {
+	padding: 10px;	
+}
+
+#list .subject:hover {   /* 글 제목 위에 커서 올린 경우 */
+	text-decoration: underline;
+	color : orange;
+	cursor: pointer;
+}
+
+.clear {
+	clear: both;
+}
+
+.left {
+	float:left;
+}
+
+.right {
+	float:right;
+}
+
+
+/* 하단 버튼 */
+.d01 {
+	margin : 5px 0px;
+}
+
+/* 페이징 */
+.center {
+    text-align: center;
+}
+
+ul.pagination{
+	list-style-type:none;
+	margin-top: 30px;
+}
+
+ul.pagination li{
+    display: inline-block;
+}
+
+ul.pagination a {
+    color: black;
+    float: left;
+    padding: 4px 8px;
+    text-decoration: none;
+    transition: background-color .3s;
+    /* border: 1px solid #ddd; */
+    /* margin: 0 4px; */
+    margin: 0px;
+/* 	width: 20px;
+	height: 20px; */
+	text-align: center;
+}
+
+ul.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+}
+
+ul.pagination a:hover:not(.active) {background-color: #ddd;}
+
+/* 모달 팝업 */
+.modal {   /* 모달 전체 적용 */	
+	background-color: rgba(0, 0, 0, 0.4);
+	width: 100%;
+	height: 100%;
+	position : fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	padding-top: 40px;  /* 내부여백  */
+	overflow: auto;
+	display : none;  /* 기본적으로 안보이기 */  
+}
+
+.modal .modal-content {
+	background-color: #fefefe;  /* 배경은 흰색 */
+	width: 80%;   /* 화면대비 80% */
+	margin: 5% auto 15% auto;  /* 위에서 5%,  아래에서 15%, 좌우 중앙정렬 */
+	border: 1px solid #888;  /* 테두리 */
+}
+
+.modal .container {
+	padding: 16px;
+	position: relative;  /* 이래야 안에 있는 absolute 들이 동작 */
+} 
+
+.modal .close {  /* close 버튼 */
+	font-size: 35px;	
+	font-weight: bold;
+	color: #000;
+	position: absolute;
+	right: 25px;
+	top: 0px;
+}
+
+.modal .close:hover,
+.modal .cloas:focus {
+	color: red;
+	cursor: pointer;
+}
+
+
+.modal input[type=text] {
+	width: 100%;
+	border: 1px solid #ccc;
+	margin: 8px 0;
+	padding: 12px 20px;
+	display: inline-block;
+	box-sizing: border-box;
+}
+
+.modal textarea {
+	width: 100%;
+	border: 1px solid #ccc;
+	
+	/*padding: 12px 20px;
+	display: inline-block;
+	
+	margin: 8px 0;
+	*/
+}
+
+.modal .fullbtn {
+	width: 100%;
+	cursor: pointer;
+}
+.goToImg {
+    font-size: 16px;
+    line-height: 22px;
+    display: block;
+    border: none;
+    background: none;
+    font: inherit;
+    box-sizing: border-box;
+    font-weight: 700;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(53, 197, 240, 0.8);
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 440px 0 0 960px;
+    width: 120px;
+    height: 44px
+}
+.goToImg:hover {
+	background-color: rgb(53, 197, 240);
+}
+.goToImgDiv {
+	position: absolute;
+}
+.imgcon ul {
+    display: block;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+.imgcon ul,ol {list-style:none;}
+.imgcon li{
+	float: left;
+	width: 330px;
+	height: 255px;
+	margin: 0 0 30px 30px;
+	
+}
+.imgcon img{
+	width: 0 auto;
+}
+.HomePopImgSpace  img{
+	object-fit: cover;
+	width: 1100px;
+	height: 500px;
+	border-radius: 4px;
+	position: absolute;
+}
+.imgcon img {
+	object-fit: cover;
+	width: 330px;
+	height: 250px;
+	position: absolute;
+	border-radius: 4px;
+	transform:scale(1.0);        
+    transition: transform .5s; 
+
+
+}
+article{
+margin: 0 auto;
+width: 1200px;
+}
+.HomeDiv2 {
+height: 350px;
+width: 0 auto;
+}
+.HomePopHSpace{
+	width: 1100px;
+	height: auto;
+	padding: 10px 0;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	position: absolute;
+	background-color: rgb(140, 140, 140, 0.6);
+	z-index: 12;
+}
+.HomePopHSpace span {
+	font-size: 22px;
+	color: white;
+	margin-left: 474px;
+}
+
+.HomeConSpace span {
+	font-size: 18px;
+	color: white;
+}
+.HomeConSpace{
+	width: 320px;
+	height: 60px;
+	background-color: rgb(140, 140, 140, 0.6);
+	position: absolute;
+	margin-top: 180px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	padding: 5px;
+}
+.HomePopImgSpace {
+	width: 1100px;
+	height: 500px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+.imgcon img:hover{            /* 마우스 호버시 */
+   transform:scale(1.3);            /* 이미지 확대 */
+   transition: transform 1s; 	/*  시간 설정  */
+
+}
+.imgDivOverflow {
+	width: 330px;
+	height: 250px;
+	border-radius: 4px;
+	overflow: hidden;
+	box-shadow: 2px 2px 4px 1px rgb(137, 137, 137, 0.8);
+	position: absolute;
 }
 
