--- a/src/main/webapp/resources/CSS/common.css
+++ b/src/main/webapp/resources/CSS/common.css
@@ -1445,8 +1445,8 @@ ul.pagination a {
     /* border: 1px solid #ddd; */
     /* margin: 0 4px; */
     margin: 0px;
-	width: 20px;
-	height: 20px;
+	/* width: 20px;
+	height: 20px; */
 	text-align: center;
 }
 
